<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_primary"
    android:scrollbarSize="40dp"
    tools:context=".view.BarbeiroCliente">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/ola"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/textoantes"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_barbeiro"
        android:layout_width="302dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/buttom_escolha"
        android:fontFamily="@font/alfa_slab_one"
        android:paddingTop="15dp"
        android:text="@string/botaoBarbeiro"
        android:textColor="@color/accents"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cliente"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/buttom_escolha"
        android:fontFamily="@font/alfa_slab_one"
        android:paddingTop="15dp"
        android:text="@string/botaoCliente"
        android:textColor="@color/accents"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_barbeiro" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="100dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/button_cliente"
        tools:layout_editor_absoluteX="18dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonVoltarLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/botao_voltar_login"
        android:drawableStart="@drawable/baseline_west_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/alfa_slab_one"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/Login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

</androidx.constraintlayout.widget.ConstraintLayout>